# claude-academy-book

./: .gitignore  README.md  pyproject.toml
chapters/: book_index.json  playlist_index.json
chapters/ai-with-claude-on-aws-from-code-to-orchestration/: enrichment.md  entities.json  metadata.yaml  overlap_report.md  quotes.md  summary.md
chapters/beyond-the-basics-with-claude-code/: audit.md  chapter.md  enrichment.md  entities.json  metadata.yaml  overlap_report.md  quotes.md  summary.md
chapters/build-a-proactive-agent-workflow-with-claude-code/: enrichment.md  entities.json  metadata.yaml  overlap_report.md  quotes.md  summary.md
chapters/build-a-production-ready-agent-with-claude-managed-agents/: enrichment.md  entities.json  metadata.yaml  overlap_report.md  quotes.md  summary.md
chapters/build-ai-agents-using-claude-in-microsoft-foundry/: enrichment.md  entities.json  metadata.yaml  overlap_report.md  quotes.md  summary.md
chapters/building-ai-native-at-enterprise-scale-monday-com-doctolib-a/: enrichment.md  entities.json  metadata.yaml  overlap_report.md  quotes.md  summary.md
chapters/building-signals-that-trade-themselves/: enrichment.md  entities.json  metadata.yaml  overlap_report.md  quotes.md  summary.md
chapters/building-with-claude-on-google-cloud/: enrichment.md  entities.json  (+4 more)
docs/: claude_code_opening_prompt.md  design_decisions.md  pipeline.md
scripts/: enrich.py  extract_summary.py  overlap_check.py  replacements.example.txt  rules_fr.txt  rules_nl.txt  stitch_book.py  transcribe_playlist.py  validate_corpus.py  yt_transcribe.py
(+100 files in other folders)
